--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,14 +7,39 @@ body {
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
+  background-color: lightslategray;
   color: #212121;
-  line-height: 1.5;
+  line-height: 1.8;
+}
+
+img {
+  display: block;
+  width: 40px;
+}
+
+ul,
+h2 {
+  margin: 0;
+  padding: 0;
 }
 
 #search-box {
   font: inherit;
-  padding: 8px;
+
   max-width: 320px;
-  margin-bottom: 16px;
+  font-size: 17px;
+  border-color: green;
+  border-style: double;
+}
+
+.country-list__item {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  margin-top: 8px;
+}
+
+.country-list__flag {
+  margin-right: 15px;
 }
